[package]
name = "matrix-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.10.0"
log = "0.4.8"
futures = "0.3.26"
clap = { version = "4.1.6", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] } 

[dependencies.matrix-sdk]
git = "https://github.com/gnunicorn/matrix-rust-sdk"
ref = "3750965367"
features = ["anyhow"]
